# setup.cfg is required by setup.py
# More info available at https://docs.python.org/3/distutils/configfile.html

[metadata]
name = networking_nsxv3
summary = This project contains OpenStack Neutron ML2 Mechanism Driver and Agent for integration with VMware NSX-T (built against version 2.3)
description-file =
    README.rst
license = Apache License, Version 2.0
author = SAP
author-email = teodor.simchev@gmail.com,aleksey.nishev@gmail.com
home-page = https://github.com/sapcc/networking-nsx-t
url = https://github.com/sapcc/networking-nsx-t
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = openstack neutron ml2 VMware NSX-T networking

[files]
packages = networking_nsxv3

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_nsxv3/locale
domain = networking_nsxv3

[update_catalog]
domain = nnetworking_nsxv3
output_dir = networking_nsxv3/locale
input_file = networking_nsxv3/locale/networking_nsxv3.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_nsxv3/locale/networking_nsxv3.pot

[entry_points]
console_scripts =
    neutron-nsxv3-agent = networking_nsxv3.plugins.ml2.drivers.nsxv3.agent.agent:main
    neutron-nsxv3-agent-cli = networking_nsxv3.plugins.ml2.drivers.nsxv3.agent.cli:CLI
neutron.ml2.mechanism_drivers =
    nsxv3 = networking_nsxv3.plugins.ml2.drivers.nsxv3.driver:VMwareNSXv3MechanismDriver
neutron.agent.firewall_drivers =
    nsxv3 = networking_nsxv3.plugins.ml2.drivers.nsxv3.agent.extensions.firewall:NSXv3SecurityGroupsDriver